[gd_scene load_steps=40 format=3 uid="uid://m75ysssspv3m"]

[ext_resource type="Script" path="res://scripts/Director.gd" id="1_lfp38"]
[ext_resource type="Script" path="res://scripts/ScenarioBook.gd" id="2_be741"]
[ext_resource type="Script" path="res://scripts/AssistantDirector.gd" id="3_nnvgw"]
[ext_resource type="Script" path="res://scripts/Scenes.gd" id="4_mkh8y"]
[ext_resource type="FontFile" uid="uid://bt4nkr8e52kvc" path="res://fonts/Mplus2-Bold.otf" id="5_24vd4"]
[ext_resource type="FontFile" uid="uid://dvl62tovxmupk" path="res://fonts/Mplus2-Regular.otf" id="6_bei22"]
[ext_resource type="Script" path="res://scripts/Background.gd" id="7_ehwng"]
[ext_resource type="Texture2D" uid="uid://dcao5gmtt113o" path="res://images/background/event_room.png" id="8_nhng7"]
[ext_resource type="Texture2D" uid="uid://rrmsl7vcm4c" path="res://images/background/in_front_of_sakiwaka_station.png" id="9_ictj0"]
[ext_resource type="Texture2D" uid="uid://bkfsr571tdwqf" path="res://images/Grid.png" id="10_mvkqw"]
[ext_resource type="Script" path="res://scripts/MessageWindow.gd" id="11_oskba"]
[ext_resource type="Texture2D" uid="uid://h40kir6k3rxw" path="res://images/MessageWindow.png" id="12_mcay5"]
[ext_resource type="Script" path="res://scripts/MessageWindowBackground.gd" id="13_a1tuv"]
[ext_resource type="FontFile" uid="uid://cmv22aufk0np2" path="res://fonts/Mplus1Code-Bold.otf" id="15_164yy"]
[ext_resource type="Script" path="res://scripts/MessageWindowTextBlock.gd" id="16_2x1rq"]
[ext_resource type="Script" path="res://scripts/MessageWindowBlinker.gd" id="17_xwgcj"]
[ext_resource type="Script" path="res://scripts/ChoiceCursor.gd" id="18_qth5v"]
[ext_resource type="Script" path="res://scripts/CenterWindow.gd" id="19_xuids"]
[ext_resource type="Texture2D" uid="uid://bwg68n0qnvqvb" path="res://images/center_window/ShogiBan.png" id="20_gotyj"]
[ext_resource type="Script" path="res://scripts/assistant_director/Bg.gd" id="20_qxivy"]
[ext_resource type="Script" path="res://scripts/assistant_director/Bgm.gd" id="21_dqion"]
[ext_resource type="Texture2D" uid="uid://dqxq5q0bpom30" path="res://images/center_window/file_and_rank.png" id="21_na47b"]
[ext_resource type="Texture2D" uid="uid://c6j864566m67c" path="res://images/CenterWindow.png" id="22_06g4y"]
[ext_resource type="Script" path="res://scripts/assistant_director/Choice.gd" id="22_cj5lk"]
[ext_resource type="Script" path="res://scripts/assistant_director/Cwnd.gd" id="23_5s8w2"]
[ext_resource type="Script" path="res://scripts/Musician.gd" id="23_6ylqn"]
[ext_resource type="Script" path="res://scripts/assistant_director/Goto.gd" id="24_envpd"]
[ext_resource type="AudioStream" uid="uid://wtqqhswcs7ni" path="res://audio/bgm/きふわらべファイター２.ogg" id="24_hs56p"]
[ext_resource type="AudioStream" uid="uid://bcg0ntta7xh26" path="res://audio/bgm/maou_game_town05.ogg" id="25_0600e"]
[ext_resource type="Script" path="res://scripts/assistant_director/Quit.gd" id="25_xmliw"]
[ext_resource type="AudioStream" uid="uid://bhjhqoh8swgni" path="res://audio/se/maou_se_sound17.ogg" id="26_1kp2p"]
[ext_resource type="Script" path="res://scripts/assistant_director/Scene.gd" id="26_d8rxk"]
[ext_resource type="AudioStream" uid="uid://dded01e4u8xny" path="res://audio/se/maou_se_sound19.ogg" id="27_xwe46"]
[ext_resource type="AudioStream" uid="uid://d2he7oscflr6e" path="res://audio/se/maou_se_sound_switch02.ogg" id="28_1r0xx"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_glhd8"]

[sub_resource type="LabelSettings" id="LabelSettings_t63ks"]
font = ExtResource("5_24vd4")
font_size = 128
outline_size = 10
outline_color = Color(0.12549, 0.12549, 0.12549, 1)
shadow_color = Color(0.12549, 0.12549, 0.12549, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_8g2fx"]
font = ExtResource("6_bei22")
font_size = 32
outline_size = 10
outline_color = Color(0.12549, 0.12549, 0.12549, 1)
shadow_size = 5
shadow_color = Color(0.12549, 0.12549, 0.12549, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_6ksp3"]
line_spacing = 8.0
font = ExtResource("15_164yy")
font_size = 32
font_color = Color(0.972549, 0.972549, 0.972549, 1)
outline_size = 1
outline_color = Color(0.12549, 0.12549, 0.12549, 1)
shadow_size = 4
shadow_color = Color(0.12549, 0.12549, 0.12549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2oa1m"]
line_spacing = 8.0
font = ExtResource("15_164yy")
font_size = 32
font_color = Color(0.972549, 0.972549, 0.972549, 1)
outline_size = 1
outline_color = Color(0.12549, 0.12549, 0.12549, 1)
shadow_size = 4
shadow_color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="Director" type="Node2D"]
material = SubResource("CanvasItemMaterial_glhd8")
script = ExtResource("1_lfp38")

[node name="ScenarioBook" type="Node" parent="."]
script = ExtResource("2_be741")

[node name="Musician" type="Node" parent="."]
script = ExtResource("23_6ylqn")

[node name="BGM" type="Node" parent="Musician"]

[node name="きふわらべファイター２" type="AudioStreamPlayer" parent="Musician/BGM"]
stream = ExtResource("24_hs56p")
volume_db = -20.0

[node name="タイトル" type="AudioStreamPlayer" parent="Musician/BGM"]
stream = ExtResource("25_0600e")
volume_db = -20.0

[node name="SE" type="Node" parent="Musician"]

[node name="ページめくり音" type="AudioStreamPlayer" parent="Musician/SE"]
stream = ExtResource("26_1kp2p")
volume_db = -5.0

[node name="選択肢カーソル移動音" type="AudioStreamPlayer" parent="Musician/SE"]
stream = ExtResource("27_xwe46")
volume_db = -15.0

[node name="選択肢確定音" type="AudioStreamPlayer" parent="Musician/SE"]
stream = ExtResource("28_1r0xx")
volume_db = -10.0

[node name="Background" type="Node2D" parent="."]
visible = false
script = ExtResource("7_ehwng")

[node name="イベントルーム" type="Sprite2D" parent="Background"]
position = Vector2(640, 360)
texture = ExtResource("8_nhng7")

[node name="崎川駅前" type="Sprite2D" parent="Background"]
position = Vector2(640, 360)
texture = ExtResource("9_ictj0")

[node name="CenterWindow" type="Node2D" parent="."]
visible = false
script = ExtResource("19_xuids")

[node name="System" type="Node2D" parent="CenterWindow"]

[node name="Frame" type="Sprite2D" parent="CenterWindow/System"]
z_index = 1000
position = Vector2(640, 360)
texture = ExtResource("22_06g4y")

[node name="将棋盤" type="Sprite2D" parent="CenterWindow"]
z_index = 100
position = Vector2(640, 272)
texture = ExtResource("20_gotyj")

[node name="ファイルとランク" type="Sprite2D" parent="CenterWindow"]
z_index = 100
position = Vector2(640, 272)
texture = ExtResource("21_na47b")

[node name="Scenes" type="Node2D" parent="."]
script = ExtResource("4_mkh8y")

[node name="タイトル" type="CanvasLayer" parent="Scenes"]

[node name="きふわらべRPG" type="Label" parent="Scenes/タイトル"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -232.0
offset_right = 512.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
text = "きふわらべＲＰＧ"
label_settings = SubResource("LabelSettings_t63ks")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Copyright" type="Label" parent="Scenes/タイトル"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = 305.0
offset_right = 637.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
text = "(C) 2023 同人サークルぐれーすけーる／むずでょ　音楽：(C) 魔王魂, 桜丸"
label_settings = SubResource("LabelSettings_8g2fx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AssistantDirector" type="Node" parent="."]
script = ExtResource("3_nnvgw")

[node name="Bg" type="Node" parent="AssistantDirector"]
script = ExtResource("20_qxivy")

[node name="Bgm" type="Node" parent="AssistantDirector"]
script = ExtResource("21_dqion")

[node name="Choice" type="Node" parent="AssistantDirector"]
script = ExtResource("22_cj5lk")

[node name="Cwnd" type="Node" parent="AssistantDirector"]
script = ExtResource("23_5s8w2")

[node name="Goto" type="Node" parent="AssistantDirector"]
script = ExtResource("24_envpd")

[node name="Quit" type="Node" parent="AssistantDirector"]
script = ExtResource("25_xmliw")

[node name="Scene" type="Node" parent="AssistantDirector"]
script = ExtResource("26_d8rxk")

[node name="MessageWindow" type="Node2D" parent="."]
z_index = 100
script = ExtResource("11_oskba")

[node name="Background" type="Sprite2D" parent="MessageWindow"]
position = Vector2(640, 360)
texture = ExtResource("12_mcay5")
script = ExtResource("13_a1tuv")

[node name="TextBlock" type="Label" parent="MessageWindow"]
offset_left = 319.0
offset_top = 507.0
offset_right = 1053.0
offset_bottom = 708.0
label_settings = SubResource("LabelSettings_6ksp3")
script = ExtResource("16_2x1rq")

[node name="BlinkerTriangle" type="Label" parent="MessageWindow/TextBlock"]
layout_mode = 0
offset_left = 642.0
offset_top = 95.0
offset_right = 674.0
offset_bottom = 140.0
text = "▼"
label_settings = SubResource("LabelSettings_6ksp3")
script = ExtResource("17_xwgcj")

[node name="BlinkerUnderscore" type="Label" parent="MessageWindow/TextBlock"]
layout_mode = 0
offset_left = 640.0
offset_top = 103.0
offset_right = 672.0
offset_bottom = 148.0
text = "＿"
label_settings = SubResource("LabelSettings_6ksp3")
script = ExtResource("17_xwgcj")

[node name="ChoiceCursor" type="Label" parent="MessageWindow/TextBlock"]
layout_mode = 0
offset_left = 1.0
offset_top = -3.0
offset_right = 33.0
offset_bottom = 42.0
text = "▶"
label_settings = SubResource("LabelSettings_2oa1m")
script = ExtResource("18_qth5v")

[node name="Grid" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("10_mvkqw")
